<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity= "center"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:text="Score:"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/onScreenScore"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textSize="24sp"
        android:textStyle="normal|italic"
        android:lineSpacingExtra="10sp"
        android:textColor="@android:color/black" />


    <Button
        android:id="@+id/true_button"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:text="@string/true_button"
        android:elevation="0dp"
        android:background="@android:color/holo_green_light"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:fontFamily="casual" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="236dp"
        android:layout_height='wrap_content'
        android:text="@string/false_button"
        android:background="@android:color/holo_red_light"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:fontFamily="casual" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    </LinearLayout>

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:background="@android:drawable/ic_media_ff"
        android:elevation="0dp"
        android:visibility="visible"
        android:textStyle="normal|bold|italic"
        android:textSize="18sp" />

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        android:background="?attr/colorButtonNormal"
        android:textColor="@android:color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        android:textStyle="normal|italic"
        android:textAllCaps="true" />

    <TextView
        android:text="@string/cheat_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textAlignment="center"
        android:layout_weight="0.09" />

    <Button
        android:id="@+id/questionlist_button"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:text="Question List"
        android:background="?attr/colorButtonNormal"
        android:textColor="@android:color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        android:textStyle="normal|italic"
        android:textAllCaps="true" />

</LinearLayout>