<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_final_score"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.peterbateson.drivingquiz.FinalScoreActivity">

    <TextView
        android:text="@string/final_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:id="@+id/textView9"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/final_score"
        android:textStyle="normal|bold"
        android:textSize="90sp"
        android:textAlignment="center" />

    <TextView
        android:text="@string/multiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/final_score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:id="@+id/textView11"
        android:textSize="24sp" />

    <Button
        android:text="@string/return_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:id="@+id/return_to_home_button"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic" />
</RelativeLayout>
